# os-user-conf-sync

./: README.md  TODO.md  pyproject.toml
os_user_conf_sync/: app.py
tests/: test_app.py
